--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 	</properties>
 
 	<dependencies>
+		<!-- Sistema Correo Electronico -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 		<!-- Web -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
