--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,15 @@ spring.datasource.username=root
 spring.datasource.password=1234567!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bobelalquilador.sistema@gmail.com
+spring.mail.password=medr nbco btdd cdba
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.from=bobelalquilador.sistema@gmail.com
