--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.from=bobelalquilador.sistema@gmail.com
+
+#defino ruta para guardar imagenes
+upload.dir=uploads/
