--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/midb
 spring.datasource.username=root
-spring.datasource.password=Dolores1234.
-#spring.datasource.password=1234567!
+#spring.datasource.password=Dolores1234.
+spring.datasource.password=1234567!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuración para ejecutar schema.sql
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
