--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "jwt-decode": "^4.0.0",
+    "ngrok": "^5.0.0-beta.2",
     "react-router-dom": "^7.6.0"
   }
 }
